[package]
name = "overherd"
version = "0.1.0"
edition = "2024"

[[example]]
name = "server"

[[example]]
name = "client"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
quinn = "0.11.9"
proto = { package = "quinn-proto", version = "0.11.13" }
rustls = { version = "0.23.5", default-features = false, features = ["std"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
directories-next = "2.0.0"
rcgen = "0.14.5"
